2005-10-04  Brian Cameron <Brian.Cameron@sun.com>

	* gui/gdmflexiserver.c: Correct reading of
	  config file.  Fixes bug #313701.  Patch
	  provided by Christiaan Welvaart
 	  <cjw@daneel.dyndns.org>.

2005-10-03  Brian Cameron <Brian.Cameron@sun.com>

	* Release 2.8.0.5
        * configure.in, NEWS, AUTHORS: Updated.

2005-10-03  Brian Cameron <Brian.Cameron@sun.com>

	* daemon/slave.c: Remove evil gdm_debug output.

2005-10-03  Brian Cameron <Brian.Cameron@sun.com>

	* gui/gdmsetup.glade: Fix label to remove unwanted
	  "\n" characters.  Fixes bug #317820.

2005-09-30  Brian Cameron <Brian.Cameron@sun.com>

	* gui/gdmchooser, gui/gdmcomm.c:  Fix messages.  Thanks
	  to Adam Weinberger <adamw@gnome.org> for patches.

2005-09-29  Brian Cameron <Brian.Cameron@sun.com>

	* daemon/verify-pam.c: Remove syslog() test that causes
	  needless syslog message when Solaris auditing is turned
	  off.
	* gui/gdmflexiserver.c, gui/greeter/greeter_item_ulist.c:
	  Correct grammar.  Corrects bug #317479, thanks to 
	  adamw@gnome.org (Adam Weinberger).

2005-09-28  William Jon McCann  <mccann@jhu.edu>

        * gui/gdmflexiserver.c (is_program_in_path, maybe_lock_screen)
        (run_logged_in_dialogue, main): Consolidate screensaver
        activation code.  Don't use deprecated gnome-exec.
        Fixes #311497.

2005-09-27  Brian Cameron <Brian.Cameron@sun.com>

        * gui/greeter/greeter_item_ulist.c: Now print syslog
          warning if GDM theme has ulist but does not have
          pam-message.

2005-09-26  Brian Cameron <Brian.Cameron@sun.com>

        * gui/gdmsetup.c, gui/gdmphotosetup.c:  Only set right/left
          mouse buttons to map to button1 when RUNNING_UNDER_GDM
          and now show hidden files by default in file dialogs.
          Fixes bug #317152.
	* gui/gdmflexiserver.c: Cleaned up startnew option.
	* gui/modules/keymouselistener.c, gui/modules/dwellmouselistener.c:
	  Remove needless include.

2005-09-22  Rodrigo Moya <rodrigo@novell.com>
