@@ -6,6 +6,7 @@
 #undef GDM_USER_PATH
 #undef HALT_COMMAND
 #undef REBOOT_COMMAND
+#undef SOUND_PROGRAM
 #undef SUSPEND_COMMAND
 #undef ENABLE_IPV6
 #undef ENABLE_NLS
