@@ -158,7 +158,7 @@ Xnest=@X_XNEST_PATH@/Xnest @X_XNEST_CONFIG_OPTIONS@
 
 # Program used to play sounds.  Should not require any 'daemon' or anything
 # like that as it will be run when no one is logged in yet.
-#SoundProgram=/usr/bin/play
+#SoundProgram=@SOUND_PROGRAM@
 
 # These are the languages that the console cannot handle because of font
 # issues.  Here we mean the text console, not X.  This is only used
