@@ -1,3 +1,11 @@
+2005-10-05  Brian Cameron <Brian.Cameron@sun.com>
+
+	* acconfig.h, configure.in, config/gdm.conf.in,
+	  daemon/gdm.h, Define SoundProgram to be
+	  /usr/bin/audioplay instead of /usr/bin/play
+	  on Solaris.  /usr/bin/play doesn't exist on
+	  Solaris.
+
 2005-10-04  Brian Cameron <Brian.Cameron@sun.com>
 
 	* gui/gdmflexiserver.c: Correct reading of
